projetos/oke/debezium-platform/httproute-conductor.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: debezium-conductor-route
  namespace: debezium-platform
spec:
  parentRefs:
    - name: nexus-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - "debezium-platform-api.tech.nexusplatform.com.br"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 60s
        backendRequest: 60s
      backendRefs:
        - name: conductor
          port: 8080
