projetos/oke/debezium-platform/httproute-stage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: debezium-stage-route
  namespace: debezium-platform
spec:
  parentRefs:
    - name: nexus-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - "debezium-platform.nexusplatform.com.br"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 60s
        backendRequest: 60s
      backendRefs:
        - name: stage
          port: 3000
